--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,5 @@
-[theme]
-base = "dark"
-primaryColor = "#000000"
-backgroundColor = "#000000"
-secondaryBackgroundColor = "#000000"
-textColor = "#000000"
-font = "sans serif"
+primaryColor = "F36295"
+backgroundColor = "#F0FF33"
+secondaryBackgroundColor = "#3183D1"
+textColor = "#03080C"
+font = "sans-serif"
